--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="img/ifms.png" />
     <title>Portfólio - Eletiva</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/style.css" />
@@ -9,14 +10,23 @@
   <body>
     <main class="page">
       <header class="page-header">
-        <div>
-          <h1>Portfólio - Eletiva</h1>
+        <div class="header-left">
+          <img src="img/eu.jpg" alt="Foto do estudante" class="foto-perfil" />
+          <div class="header-text">
+            <h1>Portfólio da Eletiva de Go</h1>
+            <p class="subtitle">
+              Registro das aulas de sexta-feira, exercícios e atividades da
+              disciplina de programação concorrente com Go.
+            </p>
+          </div>
         </div>
+
         <div class="student-box">
           <p><strong>Estudante:</strong> Henrique Matere</p>
           <p>
             <strong>Curso:</strong> Análise e Desenvolvimento de Sistemas · IFMS
           </p>
+          <p><strong>Ano:</strong> 2025</p>
         </div>
       </header>
 
